objects/Pets__c.object
<CustomObject>
    <fields>
        <fullName>Bonus_Items__c</fullName>
        <description>These are alternative items the owners can purchase for their pets. Extra cost</description>
        <inlineHelpText>Do you want bonus items? (Choose multiple)</inlineHelpText>
        <label>Bonus Items</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>Bonus_Package__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Bath, Bubbles, &amp; Dry</fullName>
                </value>
                <value>
                    <fullName>Hair Cut</fullName>
                </value>
                <value>
                    <fullName>Nail Trim</fullName>
                </value>
                <value>
                    <fullName>Training</fullName>
                </value>
                <value>
                    <fullName>Food Prep (day care provides)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Bonus_Package__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This will determine weather or not the pets have any access to bonus items</description>
        <inlineHelpText>Would you like to add on a bonus package?</inlineHelpText>
        <label>Bonus Package</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Dog_Owner__c</fullName>
        <description>These are the dogs owner. Here we can match our pets with their rightful owners</description>
        <inlineHelpText>Who do we belong to?</inlineHelpText>
        <label>Dog Owner</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Pets</relationshipLabel>
        <relationshipName>Pets</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Pet_Package__c</fullName>
        <description>This shows the daycare pet packages offered.</description>
        <inlineHelpText>Choose your daycare pet package</inlineHelpText>
        <label>Pet Package</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Gold Package</fullName>
                </value>
                <value>
                    <fullName>Silver Package</fullName>
                </value>
                <value>
                    <fullName>Bronze Package</fullName>
                </value>
                <value>
                    <fullName>Day Visit</fullName>
                </value>
                <value>
                    <fullName>Half Day Visit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Pets</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Pets Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pets</pluralLabel>
    <recordTypes>
        <fullName>Dogs</fullName>
        <active>true</active>
        <label>Dogs</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>